# aiohttp-hello-world

./: .flake8  Dockerfile  README.md  docker-compose.yml  hello-world.yaml  noxfile.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  test.yml
aiohttp_hello_world/: app.py  gunicorn_config.py
aiohttp_hello_world/adapter/: __init__.py  abstract_repostory.py  fake_repostory.py  mongo_repostory.py
aiohttp_hello_world/model/: __init__.py  guest_modell.py
aiohttp_hello_world/service/: __init__.py  guest_service.py
aiohttp_hello_world/view/: __init__.py  guest.py  liveness.py
tests/: conftest.py
tests/contract/: test_guest.py  test_hello.py
tests/files/: expected-body-list.json  new-body.json
tests/integration/: test_guest.py  test_hello.py
tests/unit/: test_guest_service.py
